--- a/App1/Properties/Resources.resx
+++ b/App1/Properties/Resources.resx
@@ -199,4 +199,10 @@
   <data name="Address Book_hv_16px1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Address Book_hv_16px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Default" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Default.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="recognition" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\recognition.exe;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
